--- a/conFusion/css/styles.css
+++ b/conFusion/css/styles.css
@@ -25,9 +25,18 @@
 }
 
 
-.address {
+address {
     font-size: 80%;
     margin: 0px;
     color: #0F0F0F;
-    
+
+}
+
+body{
+    padding:  50px 0 0 0;
+    z-index: 0;
+}
+
+.navbar-dark{
+    background-color: #512DA8;
 }
