--- a/conFusion/css/styles.scss
+++ b/conFusion/css/styles.scss
@@ -74,6 +74,22 @@ body{
     }
 }
 
+.modal-header
+{
+    background-color: $background-dark;
+
+    .modal-title{
+        color: floralwhite;
+    }
+    .close{
+        color: floralwhite;
+    }
+}
+
+.modal-body{
+    background-color: $background-pale;
+}
+
 #carouselButton{
     right: 0px;
     position: absolute;
