--- a/conFusion/css/styles.css
+++ b/conFusion/css/styles.css
@@ -47,6 +47,16 @@ body {
       left: 0;
       min-height: 300px; }
 
+.modal-header {
+  background-color: #512DA8; }
+  .modal-header .modal-title {
+    color: floralwhite; }
+  .modal-header .close {
+    color: floralwhite; }
+
+.modal-body {
+  background-color: #D1C4E9; }
+
 #carouselButton {
   right: 0px;
   position: absolute;
